documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsNotSerial(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsRT(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsSerial(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_ModeRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ModeWr(UInt16 mode, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonConfigExx(UInt32 configval, UInt32 seqaddr, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonFilterSA@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonFilterSA(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonFilterSAEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonFilterSAEx(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonFilterTA@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonFilterTA(UInt32 tamask, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonIsRunning(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MonRdEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonResume(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonStart(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonStatus(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MonStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MonStop(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgBlockRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgBlockWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgCheck(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgCommRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgCommWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgConfigEx(UInt32 configval, UInt16 cwd, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgCWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCWD1Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgCWD1Wr(UInt16 cwd1, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgCWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgCWD2Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgCWD2Wr(UInt16 cwd2, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgDataRd(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgDataWr(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgErrorRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgErrorWr(UInt16 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgFlagRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_MsgIsAccessed(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgOptRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MsgReset(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgSWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgSWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MsgSWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MsgSWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_PortRd(Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_PortWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_ProgRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, UInt32 handleval);
